crates/ruff/src/rules/flake8_todo/snapshots/ruff__rules__flake8_todo__tests__invalid-capitalization-in-todo_TD006.py.snap
---
source: crates/ruff/src/rules/flake8_todo/mod.rs
---
TD006.py:4:3: TD006 [*] Invalid TODO capitalization: `ToDo` should be `TODO`
  |
4 | # TODO (evanrittenhouse): this is a valid TODO
5 | # TDO006 - error
6 | # ToDo (evanrittenhouse): invalid capitalization
  |   ^^^^ TD006
7 | # todo (evanrittenhouse): another invalid capitalization
  |
  = help: Replace `ToDo` with `TODO`

ℹ Suggested fix
1 1 | # TDO006 - accepted
2 2 | # TODO (evanrittenhouse): this is a valid TODO
3 3 | # TDO006 - error
4   |-# ToDo (evanrittenhouse): invalid capitalization
  4 |+# TODO (evanrittenhouse): invalid capitalization
5 5 | # todo (evanrittenhouse): another invalid capitalization

TD006.py:5:3: TD006 [*] Invalid TODO capitalization: `todo` should be `TODO`
  |
5 | # TDO006 - error
6 | # ToDo (evanrittenhouse): invalid capitalization
7 | # todo (evanrittenhouse): another invalid capitalization
  |   ^^^^ TD006
  |
  = help: Replace `todo` with `TODO`

ℹ Suggested fix
2 2 | # TODO (evanrittenhouse): this is a valid TODO
3 3 | # TDO006 - error
4 4 | # ToDo (evanrittenhouse): invalid capitalization
5   |-# todo (evanrittenhouse): another invalid capitalization
  5 |+# TODO (evanrittenhouse): another invalid capitalization


