crates/ruff/src/rules/flake8_todo/snapshots/ruff__rules__flake8_todo__tests__invalid-capitalization-in-todo_TDO006.py.snap
---
source: crates/ruff/src/rules/flake8_todo/mod.rs
---
TDO006.py:4:1: TDO006 Invalid TODO capitalization: `ToDo` should be `TODO`
  |
4 | # TODO(evanrittenhouse): this is a valid TODO
5 | # TDO006 - error
6 | # ToDo(evanrittenhouse): invalid capitalization
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TDO006
7 | # todo(evanrittenhouse): another invalid capitalization
  |

TDO006.py:5:1: TDO006 Invalid TODO capitalization: `todo` should be `TODO`
  |
5 | # TDO006 - error
6 | # ToDo(evanrittenhouse): invalid capitalization
7 | # todo(evanrittenhouse): another invalid capitalization
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TDO006
  |


