crates/ruff/src/rules/flake8_todo/snapshots/ruff__rules__flake8_todo__tests__invalid-todo-tag_TD001.py.snap
---
source: crates/ruff/src/rules/flake8_todo/mod.rs
---
TD001.py:7:3: TD001 Invalid TODO tag: `XXX` should be `TODO`
  |
7 | # T001 - errors
8 | # XXX (evanrittenhouse): this is not fine
  |   ^^^ TD001
9 | # FIXME (evanrittenhouse): this is not fine
  |

TD001.py:8:3: TD001 Invalid TODO tag: `FIXME` should be `TODO`
   |
 8 | # T001 - errors
 9 | # XXX (evanrittenhouse): this is not fine
10 | # FIXME (evanrittenhouse): this is not fine
   |   ^^^^^ TD001
   |


