crates/ruff/src/rules/flake8_todo/snapshots/ruff__rules__flake8_todo__tests__missing-author-in-todo_TDO002.py.snap
---
source: crates/ruff/src/rules/flake8_todo/mod.rs
---
TDO002.py:5:1: TDO002 Missing author in TODO
  |
5 | # TODO(evanrittenhouse): this also has an author
6 | # T002 - errors
7 | # TODO: this has no author
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ TDO002
  |


