crates/ruff/src/rules/flake8_todo/snapshots/ruff__rules__flake8_todo__tests__missing-colon-in-todo_T004.py.snap
---
source: crates/ruff/src/rules/flake8_todo/mod.rs
expression: diagnostics
---
- kind:
    name: MissingColonInTODO
    body: Missing colon in TODO
    suggestion: ~
    fixable: false
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 41
  fix:
    edits: []
  parent: ~

