crates/ruff/src/rules/flake8_todo/snapshots/ruff__rules__flake8_todo__tests__missing-link-in-todo_TD003.py.snap
---
source: crates/ruff/src/rules/flake8_todo/mod.rs
---
TD003.py:9:3: TD003 Missing issue link on the line following this TODO
   |
 9 | # TDO003 - errors
10 | # TODO: this comment has no
   |   ^^^^ TD003
11 | # link after it
   |

TD003.py:12:3: TD003 Missing issue link on the line following this TODO
   |
12 | # link after it
13 | 
14 | # TODO: here's a TODO with no link after it
   |   ^^^^ TD003
15 | def foo(x):
16 |     return x
   |

TD003.py:16:3: TD003 Missing issue link on the line following this TODO
   |
16 |     return x
17 | 
18 | # TODO: here's a TODO on the last line with no link
   |   ^^^^ TD003
   |


